--- a/public/assets/css/templatemo-stand-blog.css
+++ b/public/assets/css/templatemo-stand-blog.css
@@ -82,7 +82,8 @@ h1,h2,h3,h4,h5,h6 {
 #preloader {
   overflow: hidden;
   /* background: rgb(240, 9, 9); */
-  background-image: url(../images/Avengers.gif);
+  background-image: url(../images/Marvel.gif);
+  /* background-image: url(../images/Marvel2.gif); */
   left: 0;
   right: 0;
   top: 0;
