--- a/public/assets/css/templatemo-stand-blog.css
+++ b/public/assets/css/templatemo-stand-blog.css
@@ -83,7 +83,8 @@ h1,h2,h3,h4,h5,h6 {
   overflow: hidden;
   /* background: rgb(240, 9, 9); */
   background-image: url(../images/Marvel.gif);
-  /* background-image: url(../images/Marvel2.gif); */
+  background-size: 25px 50px;
+  background-size: 50% 50%;
   left: 0;
   right: 0;
   top: 0;
